--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="utf-8">
     <title>Jellexical</title>
-    <meta name="description" content="">
+    <meta name="description" content="Fast-pasted multiplayer word game around finding anagrams!">
     <meta name="author" content="Seth Larson">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
 
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -12,5 +15,6 @@
 </head>
 <body>
 
+    <script src="bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
