Update changes to RSA encryption and base bootstrap structure

--- a/index.html
+++ b/index.html
@@ -15,6 +15,31 @@
 </head>
 <body>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h4>How to Play</h4>
+                This is how to play.
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
+                Left Column
+            </div>
+            <div class="col-sm-6 col-xs-12">
+                Middle Column
+            </div>
+            <div class="col-sm-3">
+                Right Column
+            </div>
+        </div>
+    </div>
+
+    <!-- API Scripts -->
+    <script src="https://www.atlasestateagents.co.uk/javascript/tether.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsencrypt/2.1.0/jsencrypt.min.js"></script>
+    <script src="js/websocket.js"></script>
 </body>
 </html>
