Add google font and new gitignore rules

--- a/index.html
+++ b/index.html
@@ -8,18 +8,21 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font.css">
+
+    <!-- Google Font Roboto Slab -->
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700,100' rel='stylesheet' type='text/css'>
 
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 </head>
 <body>
-
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
                 <h4>How to Play</h4>
-                This is how to play.
+                <div class="subtle">This is how to play.</div>
             </div>
         </div>
         <div class="row">
